# studious-dollop

./: CMakeLists.txt  Dockerfile  README.md  build.sh  example.db
src/: database.cpp  main.cpp
src/model/: person.hxx
